--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,18 @@
 }
 
 body {
-    background-image: ("back.jpg");
+    width:100%;
+    height:100vh;
+    background-image: ("back3.jpg");
+    background-size: cover;
     
+}
+
+p,li,h1{
+    color:white;
+    text-align: center;
+    font: size 48px;
+    margin-bottom: 50px;
 }
 
 nav {
