--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,15 @@ body {
     width:100%;
     height:100vh;
     background-image: ("back3.jpg");
+    /* background-blend-mode: darken; */
     background-size: cover;
+    background-position: center;
+    opacity: 95%;
     
+}
+
+h1 .first{
+    margin-top: 50px;
 }
 
 p,li,h1{
@@ -20,12 +27,41 @@ p,li,h1{
     margin-bottom: 50px;
 }
 
+header{
+        width: 100%;
+        height: 80px;
+        background: #373737;
+      
+}
 nav {
-    
+    display:inline-block;
+    /* margin-top: 0px; */
+    margin-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+
+a {
+    color: whitesmoke;
+    text-decoration: none;
+    font-weight: 2em;
+    font-family: "roboto";
+     margin-right: 80px;
+     padding: 30px;  
+}
+
+a:hover {
+    color:beige;
+    background-color: burlywood;
+    padding: 30px;
 }
 
 section {
-    
+    background-color: #373737;   
+}
+img {
+    width: 20%;
+    height: 50%
 }
 
 footer {
