--- a/css/styles.css
+++ b/css/styles.css
@@ -79,5 +79,11 @@ a:hover {
 }
 
 footer {
+    width: 100%;
+    height: 80px;
+    background:#373737;
+    position: absolute;
+    top :3100px;
+    left:0;
     
 }
