--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,19 @@ form {
     margin-bottom: 80px;
 }
 
+button {
+    background-color: #373737;
+    color: white;
+    font-size: 36px;
+    margin-left:2px;
+    margin-right: 2px;
+    margin-top: 2px;
+    margin-bottom:2px;
+    cursor: pointer;
+    text-align: center;
+    
+}
+
 footer {
     width: 100%;
     height: 80px;
