--- a/css/styles.css
+++ b/css/styles.css
@@ -86,16 +86,19 @@ form {
 }
 
 button {
-    background-color: #373737;
+    background-color: black;
     color: white;
-    font-size: 36px;
+    font-size: 20px;
     margin-left:2px;
     margin-right: 2px;
-    margin-top: 2px;
+    margin-top: 0;
     margin-bottom:2px;
     cursor: pointer;
     text-align: center;
-    
+    padding-right: 56px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 56px;
 }
 
 footer {
