--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,8 @@ button {
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 56px;
+    border: none;
+    text-decoration: none;
 }
 
 footer {
